<resources>
    <string name="app_name">Gameness</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="mail_address">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Date of Birth</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="next">Next</string>
    <string name="pullback">Pull Back</string>
    <string name="choose">Choose</string>
    <string name="choose_icon">Choose Avatar</string>
    <string name="choose_game">Choose Game</string>
    <string name="game_information">Game Info</string>
    <string name="search_game">Search Game</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="games">Games</string>
    <string name="discord_id">Discord Username</string>
    <string name="screenshot">Screenshot</string>
    <string name="steam_id">Steam ID</string>
    <string name="create_team">Create Team</string>
    <string name="back">Back</string>
    <string name="none">No</string>
    <string name="home">Homepage</string>
    <string name="announcements">Announcements</string>
    <string name="tournaments">Tournaments</string>
    <string name="trainings">Education</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="my_team">My Team</string>
    <string name="mail_address_validation">Please enter a valid email</string>
    <string name="phone_number_validation">Please enter a valid phone number</string>
    <string name="password_validation">Passwords must be at least 6 characters long and include at least one numeric, one uppercase and one lowercase character, one special character.</string>
    <string name="password_again_validation">Passwords do not match</string>
    <string name="full_name_validation">Please enter your full name</string>
    <string name="calendar">Calendar</string>
    <string name="login_validation">Username or Password Incorrect</string>
    <string name="see_all">View All</string>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="not_joined">Not joined</string>
    <string name="waiting">Waiting</string>
    <string name="recent_achievements">Recent Achievements</string>
    <string name="last_tournaments">Recent Tournaments</string>
    <string name="selected_games">My Games</string>
    <string name="personal_info">Personal Info</string>
    <string name="password_settings">Password Settings</string>
    <string name="mail_settings">Email Settings</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">Please enter your new password</string>
    <string name="old_username">Old username</string>
    <string name="new_username">New Username</string>
    <string name="new_password_repeat">Repeat New Password</string>
    <string name="your_mail_address">Email</string>
    <string name="new_mail">New Email</string>
    <string name="participant_count">%d Participant</string>
    <string name="filter">Filter:</string>
    <string name="all">All</string>
    <string name="applied">Applied Tournaments</string>
    <string name="approved_recipients">Confirmed Tournaments</string>
    <string name="change_username">Change Username</string>
    <string name="active_tournaments">Active Tournaments</string>
    <string name="ending">Ended Tournaments</string>
    <string name="game_settings">Game Settings</string>
    <string name="icon_change">Change Icon</string>
    <string name="icon_upload">Icon Upload</string>
    <string name="change_avatar">Change Icon</string>
    <string name="team_informations">Team Info</string>
    <string name="gamer_settings">Player Settings</string>
    <string name="invited">Invited</string>
    <string name="tournament_information">Tournament Info</string>
    <string name="fixture">Fixture</string>
    <string name="tournament_room">Tournament Room</string>
    <string name="general_information">General Info</string>
    <string name="conditions_of_participation">Participation Requirements</string>
    <string name="tournament_join">Register to Tournament</string>
    <string name="tournament_join_for_access_tournament_room">Your registration to tournament must be confirmed before you can join the Tournament Room!</string>
    <string name="team_name">Team Name</string>
    <string name="new_team_name">New Team Name</string>
    <string name="team_logo">Team Logo</string>
    <string name="load">Upload</string>
    <string name="logo_upload">Upload Logo</string>
    <string name="create">Create</string>
    <string name="choose_from_photos">Choose from Pictures</string>
    <string name="choose_from_files">Choose from Files</string>
    <string name="enter_url">Enter URL</string>
    <string name="cancel">Cancel</string>
    <string name="select_games">Your Games</string>
    <string name="select_new_games">Choose new games</string>
    <string name="invited_warning">Invited Player not found.</string>
    <string name="last_confirmed_tournament">Last Confirmed Tournament</string>
    <string name="join_tournament_room">Join Tournament Room</string>
    <string name="players">Players</string>
    <string name="game_info">Game :&#160;</string>
    <string name="tournament_info">Tournament :&#160;</string>
    <string name="date_info">Date :&#160;</string>
    <string name="your_attendance_status_info">Status :&#160;</string>
    <string name="stage_info">Stage : &#160;</string>
    <string name="last_match">Last Match</string>
    <string name="your_next_match">Next Match</string>
    <string name="not_found_tournaments">Tournament not found</string>
    <string name="not_found_game">Game not found</string>
    <string name="not_found_achievement">Achievement not found</string>
    <string name="not_found_event">Event not found</string>
    <string name="not_found_gamer">Player not found</string>
    <string name="not_found_team">You don’t have a team :(</string>
    <string name="team_description">You can create a team or you should be invited into an existing team.</string>
    <string name="invite_player">Invite Player</string>
    <string name="team">Team</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="fixture_has_not_been_formed_yet">Bracket has not been created yet.</string>
    <string name="empty_warning">Please fill the empty fields.</string>
    <string name="okay">Okay</string>
    <string name="old_password_incorrect">Old Password is wrong</string>
    <string name="try_text">Try</string>
    <string name="premium_buy_all_tournaments_join">Explore premium for many features</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="your_information_has_been_updated_successfully">Your info has been updated successfully</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="other">Other</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="before">Before</string>
    <string name="last">Previous</string>
    <string name="unsupported_url">Unsupported URL</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="referee_communication">Referee Communication</string>
    <string name="write_message">Send a message</string>
    <string name="username_validation">Must be at least 3 characters long.</string>
    <string name="update_your_games">Your games has been updated.</string>
    <string name="one_game_must_be_selected">At least one game must be selected</string>
    <string name="not_found_active_tournaments">Active tournament not found</string>
    <string name="not_found_finished_tournaments">Completed tournament not found</string>
    <string name="settings">Settings</string>
    <string name="accounts">Account</string>
    <string name="gamer">Player</string>
    <string name="invited_players">Invited Players</string>
    <string name="team_invitations">Incoming Team Invitations</string>
    <string name="tournament">Tournament</string>
    <string name="tournaments_attended">My Tournaments</string>
    <string name="my_achievements">My Achievements</string>
    <string name="my_screenshots">My screenshots</string>
    <string name="choose_player">Select Player</string>
    <string name="om">OM</string>
    <string name="kz">KZ</string>
    <string name="ky">KY</string>
    <string name="bb">BB</string>
    <string name="p">P</string>
    <string name="lower_bracket">Lower Bracket</string>
    <string name="upper_bracket">Upper Bracket</string>
    <string name="photograph">Photograph</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="event">Event</string>
    <string name="event_info">Event Information</string>
    <string name="place">Place</string>
    <string name="hour_and_date">Date and Place</string>
    <string name="discover">Discover</string>
    <string name="tournament_achievements">Tournament Achievements</string>
    <string name="team_info">Team Information</string>
    <string name="achievements">Team Information</string>
    <string name="joined_tournaments">Team Information</string>
    <string name="error_warning">An error has occurred</string>
    <string name="successful">Successful</string>
    <string name="you_did_not_choose_logo">Please select a logo</string>
    <string name="you_must_enter_new_team_name">Please enter a new team name</string>
    <string name="file_could_not_be_selected">File could not be selected!</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="third_place_match">3rd Place Match</string>
    <string name="grand_final">Grand Finale</string>
    <string name="final_text">Final</string>
    <string name="semifinal">Semi-final</string>
    <string name="quarter_final">Quarter-final</string>
    <string name="round">Round</string>
    <string name="awards">Prizes</string>
    <string name="referee">Referee</string>
    <string name="scoreboard">Standings</string>
    <string name="order">Placement</string>
    <string name="user">User</string>
    <string name="team_captain">Team Captain</string>
    <string name="close">Close</string>
    <string name="ready_messages">Ready Messages</string>
    <string name="invite">Invite</string>
    <string name="send_message_warning">Please wait to send message</string>
    <string name="no_message">No message</string>
    <string name="logout_question">Are you sure you want to log out?</string>
    <string name="forgot_my_password_underline"><u>I forgot my password</u></string>
    <string name="forgot_my_password">I forgot my password</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="joined_tournament_warning">You have already joined in the tournament.</string>
    <string name="waiting_tournament_warning">Are you sure you don\'t want to join in the tournament?</string>
    <string name="waiting_for_approval">Waiting for approval</string>
    <string name="participation_phase">Participation phase</string>
    <string name="continues">continues</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="verify_email_address">Verify email address</string>
    <string name="support_link">Support</string>
</resources>