<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/menu_announcements"
        android:title="@string/announcements"
        android:icon="@drawable/ic_announcement"/>
    <item
        android:id="@+id/menu_tournaments"
        android:title="@string/tournaments"
        android:icon="@drawable/ic_tournament"/>
    <item
        android:id="@+id/menu_events"
        android:title="@string/events"
        android:icon="@drawable/ic_calendar"/>
    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
</menu>