<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.personal.profile.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings"
            app:layout_constraintBottom_toBottomOf="@id/settings"/>

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/header1"
            android:textAllCaps="true"
            android:text="@string/settings"
            android:padding="20dp"
            android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:text="@string/accounts"
            android:background="@color/tertiary_dark"
            android:fontFamily="@font/proxima_nova_bold"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/settings"/>

        <TextView
            android:id="@+id/txt_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/personal_info"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/account"/>

        <TextView
            android:id="@+id/txt_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/verify_phone_number"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_personal_info"/>

        <TextView
            android:id="@+id/txt_verify_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/verify_email_address"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_verify_phone"/>


        <TextView
            android:id="@+id/txt_password_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/password_settings"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_verify_email"/>

        <TextView
            android:id="@+id/txt_email_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/mail_settings"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_settings"/>

        <TextView
            android:id="@+id/gamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:text="@string/gamer"
            android:layout_marginTop="10dp"
            android:background="@color/tertiary_dark"
            android:fontFamily="@font/proxima_nova_bold"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_settings"/>

        <TextView
            android:id="@+id/txt_change_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/change_username"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/gamer"/>

        <TextView
            android:id="@+id/txt_game_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/game_settings"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_change_username"/>

        <TextView
            android:id="@+id/txt_change_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/change_avatar"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_game_settings"/>
        <TextView
            android:id="@+id/txt_invite_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/invite"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_change_avatar"/>

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:text="@string/team"
            android:layout_marginTop="10dp"
            android:background="@color/tertiary_dark"
            android:fontFamily="@font/proxima_nova_bold"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_invite_player"/>

        <TextView
            android:id="@+id/txt_team_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/team_informations"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/team"/>

        <TextView
            android:id="@+id/txt_gamer_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/gamer_settings"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_team_info"/>

        <TextView
            android:id="@+id/txt_invited_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/invited_players"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_gamer_settings"/>

        <TextView
            android:id="@+id/teamInvitationsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/team_invitations"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_invited_players"/>

        <TextView
            android:id="@+id/tournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:text="@string/tournament"
            android:layout_marginTop="10dp"
            android:background="@color/tertiary_dark"
            android:fontFamily="@font/proxima_nova_bold"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/teamInvitationsTextView"/>

        <TextView
            android:id="@+id/txt_attend_tournaments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/tournaments_attended"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/tournament"/>

        <TextView
            android:id="@+id/txt_my_achievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/my_achievements"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_attend_tournaments"/>

        <TextView
            android:id="@+id/txt_my_screenshots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:visibility="gone"
            android:text="@string/my_screenshots"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_my_achievements"/>

        <TextView
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:text="@string/support_link"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            app:drawableRightCompat="@drawable/ic_right_arrow"
            app:layout_constraintTop_toBottomOf="@+id/txt_my_achievements"/>


        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:text="@string/logout"
            android:layout_marginTop="10dp"
            android:background="@color/tertiary_dark"
            android:fontFamily="@font/proxima_nova_bold"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/support"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>