<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_left_arrow"
            android:id="@+id/ic_back"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="@id/txtTeamInfo"
            app:layout_constraintBottom_toBottomOf="@id/txtTeamInfo"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/txtTeamInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_informations"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:fontFamily="@font/mark_pro_bold"
            android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:paddingLeft="3dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTeamInfo"/>

        <EditText
            android:id="@+id/edtTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:inputType="text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/teamName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_team_name"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:paddingLeft="3dp"
            android:id="@+id/new_name"
            app:layout_constraintTop_toBottomOf="@+id/edtTeamName"/>

        <EditText
            android:id="@+id/edtNewTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:inputType="text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/new_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_logo"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:paddingLeft="3dp"
            android:id="@+id/team_logo"
            app:layout_constraintTop_toBottomOf="@+id/edtNewTeamName"/>

        <TextView
            android:id="@+id/txtTeamLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:hint="@string/logo_upload"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/team_logo"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="@+id/team_logo"
            app:layout_constraintWidth_percent="0.5"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/mediumButton"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toRightOf="@+id/txtTeamLogo"
           app:layout_constraintTop_toTopOf="@+id/txtTeamLogo"
            app:layout_constraintBottom_toBottomOf="@+id/txtTeamLogo"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/load"
            android:id="@+id/btnLoadImage"
            app:layout_constraintWidth_percent="0.4"
            android:fontFamily="@font/proxima_nova_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_games"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:paddingLeft="3dp"
            android:id="@+id/selected_games"
            app:layout_constraintTop_toBottomOf="@+id/txtTeamLogo"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMyTeamGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_games"
            tools:listitem="@layout/item_choose_game"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_new_games"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:paddingLeft="3dp"
            android:id="@+id/selected_newgames"
            app:layout_constraintTop_toBottomOf="@+id/recyclerMyTeamGames"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAllGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:spanCount="3"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_newgames"
            tools:listitem="@layout/item_choose_game"
            tools:itemCount="2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/largeButton"
            app:layout_constraintTop_toBottomOf="@+id/recyclerAllGames"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>